
	* lib/xorg.cygclass: pixman is in lib/.

	* bin/*, lib/*: Fix whitepsace.  for a in $@ -> for a.

	* data/cygport.nanorc: Highlight trailing whitespace (from c.nanorc).

	* lib/utils.cygport (check_header, check_lib):
	More robust; searches gcc dirs; additional dirs added with -I and -L.

	* bin/cygport.in (cygcmake): Fixed typo.

	* CYGWIN-PATCHES/README:
	* bin/Makefile.am:
	* bin/newsbin:  Added newsbin().

	* bin/cygport.in (__pkg_diff):
	Accept RESTRICT=diff to skip .src.patch creation.

	* lib/gst-plugins0.10.cygclass: Update for good .6 and bad .5.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.5 ***

	* CYGWIN-PATCHES/README:
	* configure.ac:
	* NEWS:
	Pre-release version bump to reflect numerous changes.

	* lib/svn.cygclass: SVN_TAG now accepted.
	SVN_BRANCH requires 'full' path (including branches/).

	* lib/mono.cygclass: MONO_SOURCE_TYPE defaults to tar.bz2.

	* lib/gnome.org.cygclass: Don't override preset {CVS,SVN}_URI.

	* bin/cygport.in (unpack): Handle .gem with 'gem unpack'.
	(cygautoreconf): Handle foo.out:foo.in syntax during writability check.

	* lib/gst-plugins0.10.cygclass: Accomodate farsight optional features.

	* lib/gtkmm.cygclass (gtkmm_autoreconf):
	Check for scripts dir before including.

	* lib/wxwidgets.cygclass: Default to wx-2.8.

	* lib/gst-plugins0.10.cygclass: Better accomodate external plugins.

	* lib/mono.cygclass: Don't override preset SVN_URI.
	(mono_wrapper) Fix.

	* lib/svn.cygclass: Handle SVN_URI containing trunk or branch.

	* bin/cygport.in (cygautoreconf): Assure autotool files are writable.

	* lib/kde3.cygclass: Fix SRC_URI for kdevelop-3.4.1+.

	* lib/berkdb.cygclass: Enable Tcl bindings.
	Rename devel package to libdbX.Y-devel.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/tcl.cygclass: New cygclass for Tcl modules.

	* lib/ruby-gnome2.cygclass (ruby_gnome2_install): Fix docdir.

	* lib/bzr.cygclass:
	* lib/cvs.cygclass:
	* lib/git.cygclass: